--- a/ms/street_sense.tex
+++ b/ms/street_sense.tex
@@ -69,7 +69,8 @@
 \providecommand\phantomcaption{\caption@refstepcounter\@captype}
 \makeatother
 
-\title{Street Sense: Learning from Google Street View}
+\title{Street Sense: Learning from Google Street View\footnote{Data and scripts behind the analysis presented here can be downloaded from \url{https://github.com/geosensing/streetsense}.
+}}
 
 \author{Suriyan Laohaprapanon\thanks{Suriyan can be reached at: \href{mailto:suriyant@gmail.com}{\texttt{suriyant@gmail.com}}} \and Kimberly Ortleb\thanks{Kimberly can be reached at: \href{kim.ortleb@gmail.com}{\texttt{kim.ortleb@gmail.com}}} \and Gaurav Sood\thanks{Gaurav can be reached at: \href{gsood07@gmail.com}{\texttt{gsood07@gmail.com}}}}
 
