updated ms. + readme

--- a/ms/street_sense.tex
+++ b/ms/street_sense.tex
@@ -88,14 +88,14 @@ setwd(basedir)
 \thispagestyle{empty}
 
 \begin{abstract}
-How good are the public services and the public infrastructure? Does their quality vary by income? These are vital questions---they shed light on how well the government is doing its job, the consequences of disparities in local funding, etc. But there is little good data on many of these questions. We fill this gap by describing a scalable method of getting data on one crucial piece of public infrastructure: roads. We assess the quality of roads and sidewalks by exploiting data from Google Street View. We randomly sample locations on major roads, query Google Street View images for those locations and code the images using Amazon's Mechanical Turk. We apply this method to assess the quality of roads in Bangkok, Jakarta, Lagos, and Wayne County, Michigan. Jakarta's roads have more than five times the potholes than roads of any other city. Surprisingly, the proportion of road segments with potholes in Bangkok, Lagos, and Wayne is about the same, between .06 and .07. Using the data, we also estimate the relation between the condition of the roads and local income in Wayne, MI. We find that roads in more affluent census tracts have somewhat fewer potholes.
+How good are the public services and the public infrastructure? Does their quality vary by income? These are vital questions---they shed light on how well the government is doing its job, the consequences of disparities in local funding, etc. But there is little good data on many of these questions. We fill this gap by describing a scalable method of getting data on one crucial piece of public infrastructure: roads. We assess the quality of roads and sidewalks by exploiting data from Google Street View. We randomly sample locations on major roads, query Google Street View images for those locations and code the images using Amazon's Mechanical Turk. We apply this method to assess the quality of roads in Bangkok, Jakarta, Lagos, and Wayne County, Michigan. Jakarta's roads have nearly four times the potholes than roads of any other city. Surprisingly, the proportion of road segments with potholes in Bangkok, Lagos, and Wayne is about the same, between .06 and .07. Using the data, we also estimate the relation between the condition of the roads and local income in Wayne, MI. We find that roads in more affluent census tracts have somewhat fewer potholes.
 \end{abstract}
 
 \clearpage
 
 \doublespacing
 
-Poorer the quality of the public infrastructure and public services, generally, worse the quality of life. For instance, potholed roads mean that vehicles can't go as fast and the ride is bumpier. If sidewalks aren't paved, the physically disabled have a tough time getting anywhere. If garbage isn't picked up regularly, foul smells and unsightliness are part of life, and the risk of disease is greater.  
+Poorer the quality of the public infrastructure and public services, generally, worse the quality of life. For instance, potholed roads mean that vehicles can't go as fast and the ride is bumpier. If sidewalks aren't paved, physically disabled have a tough time getting anywhere. If garbage isn't picked up regularly, foul smells and unsightliness are part of life, and the risk of disease is greater.  
 
 As these examples convey, the quality of public infrastructure and public services matters immensely. It sheds light on the quality of life, and on the resources and functioning of the government. So how good is the public infrastructure? And how good are the public services? More often than not, we have no good answer to these questions.
 
@@ -115,7 +115,7 @@ To efficiently learn about the condition of the streets, sidewalks, and such, fr
 
 To illustrate the utility of the method, we apply it to learn the condition of the roads, the condition of the sidewalks, and litter on the street in four prominent third-world cities and one poor American county.
 
-To learn the condition of roads in Bangkok, Dhaka, Jakarta, Lagos, and Wayne, MI, in the latter half of 2017, we downloaded data on all the streets from OSM. But we feared that in many of these cities, Google Street View's coverage of neighborhood roads would be patchy. So we decided to focus on \href{https://wiki.openstreetmap.org/wiki/Tag:highway=primary}{primary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=secondary}{secondary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=tertiary}{tertiary}, and \href{https://wiki.openstreetmap.org/wiki/Tag:highway=trunk}{trunk} roads. (To learn   Thus, we used the \href{https://github.com/geosensing/geo_sampling}{geo-sampling package} to take a random sample of primary, secondary, tertiary, and trunk road segments for each location (see Figures \ref{fig:google_bangkok}, \ref{fig:google_jakarta}, \ref{fig:google_lagos}). (Figures \ref{fig:bangkok_sample}, \ref{fig:jakarta_sample}, \ref{fig:lagos_sample}, \ref{fig:wayne2_sample} plot the starting longitude and latitude without the surrounding detail of the sampled segments of Bangkok, Jakarta, Lagos, and Wayne, MI respectively.) For Bangkok, Dhaka, Jakarta, and Lagos,  we drew a sample of 1,000 segments each. For Wayne, MI, we drew a sample of 5,000 segments. We drew a larger sample for Wayne, MI because we wanted to estimate the relationship between local income and road conditions there. (We chose an American county to estimate the relationship between local income and road conditions because data on local income is readily available for the US.)
+To learn the condition of roads in Bangkok, Dhaka, Jakarta, Lagos, and Wayne, MI, in the latter half of 2017, we downloaded data on all the streets from OSM. But we feared that in many of these cities, Google Street View's coverage of neighborhood roads would be patchy. So we decided to focus on \href{https://wiki.openstreetmap.org/wiki/Tag:highway=primary}{primary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=secondary}{secondary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=tertiary}{tertiary}, and \href{https://wiki.openstreetmap.org/wiki/Tag:highway=trunk}{trunk} roads. We used the \href{https://github.com/geosensing/geo_sampling}{geo-sampling package} to take a random sample of primary, secondary, tertiary, and trunk road segments for each location (see Figures \ref{fig:google_bangkok}, \ref{fig:google_jakarta}, \ref{fig:google_lagos}). (Figures \ref{fig:bangkok_sample}, \ref{fig:jakarta_sample}, \ref{fig:lagos_sample}, \ref{fig:wayne2_sample} plot the starting longitude and latitude without the surrounding detail of the sampled segments of Bangkok, Jakarta, Lagos, and Wayne, MI respectively.) For Bangkok, Dhaka, Jakarta, and Lagos,  we drew a sample of 1,000 segments each. For Wayne, MI, we drew a sample of 5,000 segments. We drew a larger sample for Wayne, MI because we wanted to estimate the relationship between local income and road conditions there. (We chose an American county to estimate the relationship between local income and road conditions because data on local income is readily available for the US.)
 
 \begin{figure}[H]
 \centering
