--- a/ms/street_sense.tex
+++ b/ms/street_sense.tex
@@ -95,11 +95,11 @@ How good are the public services and the public infrastructure? Does their quali
 
 \doublespacing
 
-Poorer the quality of the public infrastructure and public services, generally, worse the quality of life. For instance, potholed roads mean that vehicles can't go as fast and the ride is bumpier. If sidewalks aren't paved, physically disabled have a tough time getting anywhere. If garbage isn't picked up regularly, foul smells and unsightliness are part of life, and the risk of disease is greater.  
+The poorer the quality of the public infrastructure and public services, generally, the worse the quality of life. For instance, potholed roads mean that vehicles can't go as fast and the ride is bumpier. If sidewalks aren't paved, physically disabled have a tough time getting anywhere. If garbage isn't picked up regularly, foul smells and unsightliness are part of life, and the risk of disease is greater.  
 
 As these examples convey, the quality of public infrastructure and public services matters immensely. It sheds light on the quality of life, and on the resources and functioning of the government. So how good is the public infrastructure? And how good are the public services? More often than not, we have no good answer to these questions.
 
-In this paper, we make progress in developing a way to answer questions about the quality of one important piece of public infrastructure: roads. We capitalize on \href{https://www.google.com/streetview/}{Google Street View} to learn about the condition of the roads. We randomly sample locations on the roads, get Google Street View images for those locations, and crowdsource the coding of the images. To illustrate the method's utility, we apply the method to learn about the condition of roads in Wayne (Michigan), Bangkok, Lagos, and Jakarta, and to assess the association between local income and the condition of the roads in Wayne. We also discuss ways this labeled data can be augmented and used to build automated systems to answer these questions at scale.
+In this paper, we introduce a method to answer questions about the quality of one important piece of public infrastructure: roads. We capitalize on \href{https://www.google.com/streetview/}{Google Street View} to learn about the condition of the roads. We randomly sample locations on the roads, get Google Street View images for those locations, and crowdsource the coding of the images. To illustrate the method's utility, we apply the method to learn about the condition of roads in Wayne (Michigan), Bangkok, Lagos, and Jakarta, and to assess the association between local income and the condition of the roads in Wayne. We also discuss ways this labeled data can be augmented and used to build automated systems to answer these questions at scale.
 
 \section*{Learning From Google Street View}
 
@@ -107,15 +107,15 @@ Since 2007, Google has been working on regularly taking panoramic images of all 
 
 But patchy coverage is not the only problem with Google Street View data. The other is that the data are not always current. A large chunk of the data is at least a few years old. But somewhat older data has its value, especially because we expect Google to map those areas again in the future. The data aren't perfect but they are rich and valuable. 
 
-But how do we efficiently capitalize on Google Steet View data? We can download all the data for a city. But doing that is \href{https://developers.google.com/maps/documentation/streetview/usage-and-billing}{expensive}. And it may not even be useful. Depending on the question, a large random sample can fill in nicely for a census. For learning the condition of the roads, that is precisely the case.
+But how do we efficiently capitalize on Google Street View data? We could download all the data for a city. But doing so is \href{https://developers.google.com/maps/documentation/streetview/usage-and-billing}{expensive}. And it may not even be useful. Depending on the question, a large random sample can fill in nicely for a census. For learning the condition of the roads, that is precisely the case.
 
 To efficiently learn about the condition of the streets, sidewalks, and such, from Google Street View data, we devise a new workflow. We start by downloading data on the kinds of roads we are interested from \href{https://www.openstreetmap.org}{Open Street Map} (OSM). We then chunk the roads into half a kilometer segments, and then randomly sample from the segments. (The open source Python package \href{https://github.com/geosensing/geo_sampling}{geo-sampling} \citep{laoha2017} implements this workflow.) We then take the starting latitude and longitude of the sampled segments and query the \href{https://developers.google.com/maps/documentation/streetview/intro}{Google Street View API}.
 
 \section*{Application}
 
-To illustrate the utility of the method, we apply it to learn the condition of the roads, the condition of the sidewalks, and litter on the street in four prominent third-world cities and one poor American county.
+To illustrate the utility of the method, we apply it to learn the condition of the roads, the condition of the sidewalks, and the presence of litter on the streets in four prominent third-world cities and one poor American county.
 
-To learn the condition of roads in Bangkok, Dhaka, Jakarta, Lagos, and Wayne, MI, in the latter half of 2017, we downloaded data on all the streets from OSM. But we feared that in many of these cities, Google Street View's coverage of neighborhood roads would be patchy. So we decided to focus on \href{https://wiki.openstreetmap.org/wiki/Tag:highway=primary}{primary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=secondary}{secondary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=tertiary}{tertiary}, and \href{https://wiki.openstreetmap.org/wiki/Tag:highway=trunk}{trunk} roads. We used the \href{https://github.com/geosensing/geo_sampling}{geo-sampling package} to take a random sample of primary, secondary, tertiary, and trunk road segments for each location (see Figures \ref{fig:google_bangkok}, \ref{fig:google_jakarta}, \ref{fig:google_lagos}). (Figures \ref{fig:bangkok_sample}, \ref{fig:jakarta_sample}, \ref{fig:lagos_sample}, \ref{fig:wayne2_sample} plot the starting longitude and latitude without the surrounding detail of the sampled segments of Bangkok, Jakarta, Lagos, and Wayne, MI respectively.) For Bangkok, Dhaka, Jakarta, and Lagos,  we drew a sample of 1,000 segments each. For Wayne, MI, we drew a sample of 5,000 segments. We drew a larger sample for Wayne, MI because we wanted to estimate the relationship between local income and road conditions there. (We chose an American county to estimate the relationship between local income and road conditions because data on local income is readily available for the US.)
+To learn the condition of roads in Bangkok, Dhaka, Jakarta, Lagos, and Wayne, MI, in the latter half of 2017, we downloaded data on all the streets from OSM. We feared that in many of these cities, Google Street View's coverage of neighborhood roads would be patchy. So we decided to focus on \href{https://wiki.openstreetmap.org/wiki/Tag:highway=primary}{primary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=secondary}{secondary}, \href{https://wiki.openstreetmap.org/wiki/Tag:highway=tertiary}{tertiary}, and \href{https://wiki.openstreetmap.org/wiki/Tag:highway=trunk}{trunk} roads. We used the \href{https://github.com/geosensing/geo_sampling}{geo-sampling package} to take a random sample of primary, secondary, tertiary, and trunk road segments for each location (see Figures \ref{fig:google_bangkok}, \ref{fig:google_jakarta}, \ref{fig:google_lagos}). (Figures \ref{fig:bangkok_sample}, \ref{fig:jakarta_sample}, \ref{fig:lagos_sample}, \ref{fig:wayne2_sample} plot the starting longitude and latitude without the surrounding detail of the sampled segments of Bangkok, Jakarta, Lagos, and Wayne, MI respectively.) For Bangkok, Dhaka, Jakarta, and Lagos,  we drew a sample of 1,000 segments each. For Wayne, MI, we drew a sample of 5,000 segments. We drew a larger sample for Wayne, MI because we wanted to estimate the relationship between local income and road conditions there. (We chose an American county to estimate the relationship between local income and road conditions because data on local income is readily available for the US.)
 
 \begin{figure}[H]
 \centering
@@ -152,7 +152,7 @@ The proportion of road segments with potholes is Jakarta is an astonishing .23. 
 
 When it comes to cracks in the road, Wayne takes the top spot---the proportion of segments in Wayne with cracks is .62 followed by .44 for Jakarta and .20 and .24 for Bangkok and Lagos respectively. The high proportion is not particularly noteworthy for Wayne given its latitude, but it is noteworthy for Jakarta. 
 
-Jakarta is also the dirtiest of the 4 cities with .21 of the segments containing litter.  Lagos comes second with .15 of the segments with litter. Lagos also takes the bottom spot paved sidewalks---just .30 of the segments have a paved sidewalk.
+Jakarta is also the dirtiest of the 4 cities with .21 of the segments containing litter.  Lagos comes second with .15 of the segments with litter. Lagos also takes the bottom spot for paved sidewalks---just .30 of the segments have a paved sidewalk.
 
 \begin{table}[h]
 \centering
