fixed fig labeling error (dhaka/wayne)

--- a/ms/street_sense.tex
+++ b/ms/street_sense.tex
@@ -199,7 +199,7 @@ The method that we describe here can be easily extended to automate the producti
 \section{Sampled Locations in Dhaka}
 \begin{figure}[H]
 \centering
-\caption{Sampled Locations in Wayne} \label{fig:google_dhaka}
+\caption{Sampled Locations in Dhaka} \label{fig:google_dhaka}
 	\includegraphics[width=\textwidth]{../figs/dhaka-gmap.png}
 \end{figure}
 \clearpage
