--- a/scripts/join_gold_standard_with_turk.ipynb
+++ b/scripts/join_gold_standard_with_turk.ipynb
@@ -462,17 +462,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "ko_turk.columns = [c.lower().replace(' ', '_') for c in ko_turk.columns]\n",
-    "ko_turk.rename(columns={\"answer.do_you_see_any_of_the_following?.a_paved_sidewalk\": \"turk_sidewalk\"}, inplace = True)"
+    "ko_turk.rename(columns={\"answer.do_you_see_any_of_the_following?.a_paved_sidewalk\": \"turk_sidewalk\",\n",
+    "                       \"answer.do_you_see_any_of_the_following?.litter\": \"turk_litter\",\n",
+    "                       \"answer.radios.no_markings\": \"turk_no_markings\",\n",
+    "                       \"answer.radios.not_clear\": \"turk_not_clear\"}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -538,13 +541,167 @@
        "All              320   293  613"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.crosstab(ko_turk.sidewalk, ko_turk.turk_sidewalk, margins=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>turk_litter</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>litter</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>64</td>\n",
+       "      <td>34</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>461</td>\n",
+       "      <td>54</td>\n",
+       "      <td>515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>525</td>\n",
+       "      <td>88</td>\n",
+       "      <td>613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "turk_litter  False  True  All\n",
+       "litter                       \n",
+       "1.0             64    34   98\n",
+       "2.0            461    54  515\n",
+       "All            525    88  613"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(ko_turk.litter, ko_turk.turk_litter, margins=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>turk_no_markings</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>no_markings</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>68</td>\n",
+       "      <td>242</td>\n",
+       "      <td>310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>286</td>\n",
+       "      <td>17</td>\n",
+       "      <td>303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>354</td>\n",
+       "      <td>259</td>\n",
+       "      <td>613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "turk_no_markings  False  True  All\n",
+       "no_markings                       \n",
+       "1.0                  68   242  310\n",
+       "2.0                 286    17  303\n",
+       "All                 354   259  613"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(ko_turk.no_markings, ko_turk.turk_no_markings, margins=True)"
    ]
   },
   {
